src/snapshots/i3_cycles__protocol__tests__CycleSelected { action: Selected }.snap
---
source: src/protocol.rs
expression: response
---
{
  "CycleSelected": {
    "action": "Selected"
  }
}
