src/snapshots/i3_cycles__protocol__tests__Cycles { names: ["default", "work"] }.snap
---
source: src/protocol.rs
expression: response
---
{
  "Cycles": {
    "names": [
      "default",
      "work"
    ]
  }
}
