src/snapshots/i3_cycles__protocol__tests__Error { message: "test error" }.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "test error"
  }
}
