src/snapshots/i3_cycles__protocol__tests__NextWorkspace { workspace: "2" }.snap
---
source: src/protocol.rs
expression: response
---
{
  "NextWorkspace": {
    "workspace": "2"
  }
}
