src/snapshots/i3_cycles__protocol__tests__Toggled { action: Removed }.snap
---
source: src/protocol.rs
expression: response
---
{
  "Toggled": {
    "action": "Removed"
  }
}
