src/snapshots/i3_cycles__protocol__tests__cycles_single.snap
---
source: src/protocol.rs
expression: response
---
{
  "Cycles": {
    "names": [
      "default"
    ]
  }
}
