src/snapshots/i3_cycles__protocol__tests__error_array_instead_of_object.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
trailing characters at line 1 column 26
