src/snapshots/i3_cycles__protocol__tests__error_deeply_nested_invalid.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
invalid type: map, expected a string at line 1 column 25
