src/snapshots/i3_cycles__protocol__tests__error_empty_string_valid.snap
---
source: src/protocol.rs
expression: "\"Empty string is valid for workspace field\""
---
Empty string is valid for workspace field
