src/snapshots/i3_cycles__protocol__tests__error_extra_field_rejected.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
invalid type: map, expected unit at line 1 column 9
