src/snapshots/i3_cycles__protocol__tests__error_long_message.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "This is a very long error message that explains in detail what went wrong and provides guidance on how to fix the issue"
  }
}
